@@ -1,0 +1,29 @@
+val: AT_PHDR int: 03 ptr: 0x........
+val: AT_PHENT int: 04 ptr: 0x........
+val: AT_PHNUM int: 05 ptr: 0x........
+val: AT_PAGESZ int: 06 ptr: 0x........
+val: AT_FLAGS int: 08 ptr: 0x........
+val: AT_ENTRY int: 09 ptr: 0x........
+val: AT_BASE int: 07 ptr: 0x........
+val: AT_EHDRFLAGS int: 24 ptr: 0x........
+val: AT_EXECPATH int: 15 ptr: 0x........
+EXECPATH: BASEDIR/valgrind/none/tests/freebsd/auxv
+val: AT_OSRELDATE int: 18 ptr: 0x........
+val: AT_CANARY int: 16 ptr: 0x........
+val: AT_CANARYLEN int: 17 ptr: 0x........
+val: AT_NCPUS int: 19 ptr: 0x........
+val: AT_PAGESIZES int: 20 ptr: 0x........
+val: AT_PAGESIZESLEN int: 21 ptr: 0x........
+val: AT_IGNORE int: 01 ptr: 0x........
+val: AT_STACKPROT int: 23 ptr: 0x........
+val: AT_IGNORE int: 01 ptr: 0x........
+val: AT_ARGC int: 28 ptr: 0x........
+val: AT_ARGV int: 29 ptr: 0x........
+ARGV: ./auxv
+val: AT_ENVC int: 30 ptr: 0x........
+val: AT_ENVV int: 31 ptr: 0x........
+val: AT_PS_STRINGS int: 32 ptr: 0x........
+PS_STRINGS ARGV: ./auxv
+val: AT_IGNORE int: 01 ptr: 0x........
+val: AT_USRSTACKBASE int: 35 ptr: 0x........
+val: AT_USRSTACKLIM int: 36 ptr: 0x........
